--- a/index.html
+++ b/index.html
@@ -8,6 +8,28 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <h2 class="round-info">Player 1's turn (x)</h2>
+        <div class="table">
+            <button class="row0 column0"></button>
+            <button class="row0 column1"></button>
+            <button class="row0 column2"></button>
+            <button class="row1 column0"></button>
+            <button class="row1 column1"></button>
+            <button class="row1 column2"></button>
+            <button class="row2 column0"></button>
+            <button class="row2 column1"></button>
+            <button class="row2 column2"></button>
+        </div>
+        <div class="enter-name">
+            <label for="player-1-name">Player 1 (x): </label>
+            <input type="text" id="player-1-name" name="player-1-name">
+            <label for="player-2-name">Player 2 (o): </label>
+            <input type="text" id="player-2-name" name="player-2-name">
+            <button>Set Names</button>
+        </div>
+        <button>New Game</button>
+        <h2 class="win-info"></h2>
+    </div>
 </body>
 </html>
